# cryptoauthlib

./: CMakeLists.txt
lib/basic/: atca_helpers.c
lib/crypto/hashes/: sha1_routines.c
lib/hal/: hal_esp32_i2c.c
